[package]
name = "mqo-replay"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Behavioral regression replay of mqo-agent against its own decision history"
license = "MIT OR Apache-2.0"
authors = ["Joe Yen <jyen.tech@gmail.com>"]

[[bin]]
name = "mqo-replay"
path = "src/main.rs"

[lib]
name = "mqo_replay"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
